--- a/web/css/AircraftDetails.css
+++ b/web/css/AircraftDetails.css
@@ -1,7 +1,7 @@
 #entries a.entry {
     background: none repeat scroll 0% 0% rgb(255, 255, 255);    
     border: 2px solid rgba(185,185,185,1);
-    border-radius: 4px 4px 4px 4px;
+    border-radius: 4px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
     margin: 0px 15px 15px 75px;
     padding: 10px;
