--- a/web/css/Forms.css
+++ b/web/css/Forms.css
@@ -6,7 +6,32 @@
         Purpose of the stylesheet follows.
 */
 
-.Forms {
+
+div#formular form input{
+    width: 130px;
+    height: 29px;
+    padding: 5;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+    color: rgba(255,255,255,1);
+    font: normal 13px/29px "Lucida Grande";
+    border: 1px inset rgba(154,154,154,1);
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    background-image: rgba(235,235,235,1);
+    background-image:-webkit-gradient(linear,left bottom,left top,color-stop(0,#2b6f80),color-stop(0.5,#3b88a3),color-stop(0.51,#5aa0be),color-stop(1,#74b8e0));
+    background-image:-moz-linear-gradient(center bottom,#2b6f80 0%,#3b88a3 50%,#5aa0be 51%,#74b8e0 100%);
+    -webkit-box-shadow: rgba(0,0,0,0.1) 0px 2px 0px 0px, inset rgba(9,9,5,1) 1px 2px 3px 0px;
+    -moz-box-shadow: rgba(0,0,0,0.1) 0px 2px 0px 0px, inset rgba(9,9,5,1) 1px 2px 3px 0px;
+    box-shadow: rgba(0,0,0,0.1) 0px 2px 0px 0px, inset rgba(9,9,5,1) 1px 2px 3px 0px;
+
+}
+
+
+
+div#formular form li.formularDown input.button{
     width: 81px;
     height: 24px;
     padding: 0;
@@ -28,4 +53,11 @@
     -webkit-box-shadow: rgba(0,0,0,0.38) 0px 2px 6px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
     -moz-box-shadow: rgba(0,0,0,0.38) 0px 2px 6px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
     box-shadow: rgba(0,0,0,0.38) 0px 2px 6px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
+}
+
+div#formular form li.formularDown input.button:active{
+    -webkit-box-shadow: rgba(0,0,0,0.38) 0px 2px 2px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
+    -moz-box-shadow: rgba(0,0,0,0.38) 0px 2px 2px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
+    box-shadow: rgba(0,0,0,0.38) 0px 2px 2px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
+    
 }
