--- a/web/css/homeView.css
+++ b/web/css/homeView.css
@@ -44,18 +44,13 @@ input{
   border-radius:5px;
   
   width: 600px;
-height: 350px;
+  height: 350px;
   
 
     
 }
 
 
-.ui-datepicker {
-    background: lightgray;
-    border: 2px solid #555;
-    color: black;
-}
 
 label {
    padding-top:  5px; 
@@ -121,13 +116,13 @@ label {
 
 
 
-.ui-autocomplete { position: absolute; 
+/*.ui-autocomplete { position: absolute; 
                   cursor: pointer; 
                   list-style: none;
                   background: whitesmoke;
                   height: 200px;
                     overflow-x: auto;
                   
-}
+}*/
 
 
