--- a/web/css/homeView.css
+++ b/web/css/homeView.css
@@ -13,7 +13,6 @@ root {
 
 
 #formular {
-
     padding: 10px;
     margin: auto;
     margin-top: 50px;
@@ -29,15 +28,23 @@ root {
 }
 
 .formularDown {
-    list-style-type: none;
     margin-top: 150px;
-    text-align: center;
+    padding-bottom: 35px;
+    border-radius:0 0 5px 5px;
+
+    text-align: center; 
+    border-top: 1px solid #ccc;
+    background-color: #ddd;
+    
+    
 }
 
 .formularMiddl {
     list-style-type: none;
     padding: 20px;
     text-align: center;
+    border-bottom: 1px solid #ccc;
+
 }
 
 #formularLeft {
