--- a/web/css/Forms.css
+++ b/web/css/Forms.css
@@ -10,17 +10,19 @@
 div#formular form input{
     width: 130px;
     height: 29px;
-    padding: 5;
+    padding: 2px;
+    margin: 2px;
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
-    color: rgba(255,255,255,1);
-    font: normal 13px/29px "Lucida Grande";
-    border: 1px inset rgba(154,154,154,1);
+    color: black;
+    font: normal 18px;
+    border: none;
     -webkit-border-radius: 8px;
     -moz-border-radius: 8px;
     border-radius: 8px;
-    background-color: #bdbdbd;
+    background-color: #bdbdbd;/*fallback*/
+    background-image: url(/images/NoiseBackground.png);
     -webkit-box-shadow: rgba(0,0,0,0.1) 0px 2px 0px 0px, inset rgba(9,9,5,1) 1px 2px 3px 0px;
     -moz-box-shadow: rgba(0,0,0,0.1) 0px 2px 0px 0px, inset rgba(9,9,5,1) 1px 2px 3px 0px;
     box-shadow: rgba(0,0,0,0.1) 0px 2px 0px 0px, inset rgba(9,9,5,1) 1px 2px 3px 0px;
@@ -33,17 +35,25 @@ div#formular label{
     padding: 3px;
 }
 
-div#formular form li.formularDown input.button{
+.airportField {
+    color: black;
+    background-color: #bdbdbd;
+    width: 70px;
+    border: outset 2px;
+    margin: 5px;
+}
+
+div#formular form div.formularDown input.button{
     width: 81px;
     height: 24px;
-    padding: 0;
+    margin: 4px;
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
-    color: rgba(0,0,0,1);
+    color: black;
     font: bold 15px/24px "Lucida Grande";
     text-shadow: rgba(255,255,255,1) 0px 1px 3px;
-    border: 2px solid rgba(155,155,155,1);
+    border: 1px outset rgba(155,155,155,1);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
@@ -52,14 +62,14 @@ div#formular form li.formularDown input.button{
     background-image: -moz-linear-gradient(top, #949494 0%,#efefef 39%,#707070 100%);
     background-image: -o-linear-gradient(top, #949494 0%,#efefef 39%,#707070 100%);
     background-image: linear-gradient(top, #949494 0%,#efefef 39%,#707070 100%);
-    -webkit-box-shadow: rgba(0,0,0,0.38) 0px 2px 6px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
-    -moz-box-shadow: rgba(0,0,0,0.38) 0px 2px 6px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
-    box-shadow: rgba(0,0,0,0.38) 0px 2px 6px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
+    -webkit-box-shadow: rgba(0,0,0,0.38) 0px 2px 3px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
+    -moz-box-shadow: rgba(0,0,0,0.38) 0px 2px 3px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
+    box-shadow: rgba(0,0,0,0.38) 0px 2px 3px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
 }
 
-div#formular form li.formularDown input.button:active{
-    -webkit-box-shadow: rgba(0,0,0,0.38) 0px 2px 2px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
-    -moz-box-shadow: rgba(0,0,0,0.38) 0px 2px 2px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
-    box-shadow: rgba(0,0,0,0.38) 0px 2px 2px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
+div#formular form div.formularDown input.button:active{
+    -webkit-box-shadow: rgba(0,0,0,0.38) 0px 0px 0px 0px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
+    -moz-box-shadow: rgba(0,0,0,0.38) 0px 0px 0px px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
+    box-shadow: rgba(0,0,0,0.38) 0px 0px 0px 0px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
     
 }
