--- a/web/css/styleMod.css
+++ b/web/css/styleMod.css
@@ -9,7 +9,8 @@ ul,ol,li,h1,h2,h3,h4,h5,h6,div,pre,form,body,html,p,blockquote,fieldset,input {
 /* the backgroundcolor of the whole page */
 #wholePage {
     background-image: url(/images/NoiseBackground.png);
-    background-image: url(/images/NoiseBackground.png);
+    background-attachment:fixed;
+
 }
 
 h1 {
@@ -170,7 +171,7 @@ to {
 
 /* PAGECONTENT */
 #body {
-   
+
 
     /***  CSS Gradient  ***/
     background-image: -webkit-gradient(linear, left top, left bottom,
