--- a/web/css/AircraftDetails.css
+++ b/web/css/AircraftDetails.css
@@ -4,15 +4,16 @@
     border-radius: 4px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
     margin: 0px 15px 15px 75px;
-    padding: 10px;
+    padding: 2px;
+    margin-top: 20px;
     height: 95px;
     width: 800px;
     float: left;
-    position: relative;
+
 }
 
 h2{
-	padding: 20px;
+    padding: 20px;
 }
 
 #entries a.entry:hover {
@@ -27,7 +28,7 @@ h2{
 #entries .entry .inline {
     position: absolute;
     width: 590px;
-    height: 150px;
+    height: 100px;
 }
 
 #entries .entry .image {
@@ -66,6 +67,10 @@ h2{
     height: 67px;
     overflow: hidden;
     float: left;
+}
+
+.clear{
+    clear: both;
 }
 
 
