--- a/web/css/Forms.css
+++ b/web/css/Forms.css
@@ -7,9 +7,9 @@
 */
 
 
-div#formular form input{
+#homeForm form input{
     width: 130px;
-    height: 29px;
+    height: 22px;
     padding: 2px;
     margin: 2px;
     -webkit-box-sizing: content-box;
@@ -18,22 +18,36 @@ div#formular form input{
     color: black;
     font: normal 18px;
     border: none;
-    -webkit-border-radius: 8px;
-    -moz-border-radius: 8px;
-    border-radius: 8px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius:4px;
+    border-radius:4px;
     background-color: #aaa;/*fallback*/
     background-image: url(/images/NoiseBackground.png);
-    -webkit-box-shadow: rgba(0,0,0,0.1) 0px 2px 0px 0px, inset rgba(9,9,5,1) 1px 2px 3px 0px;
-    -moz-box-shadow: rgba(0,0,0,0.1) 0px 2px 0px 0px, inset rgba(9,9,5,1) 1px 2px 3px 0px;
-    box-shadow: rgba(0,0,0,0.1) 0px 2px 0px 0px, inset rgba(9,9,5,1) 1px 2px 3px 0px;
+    -webkit-box-shadow: rgba(0,0,0,0.1) 0px 1px 0px 0px, inset rgba(9,9,5,1) 1px 1px 1px 0px;
+    -moz-box-shadow: rgba(0,0,0,0.1) 0px 1px 0px 0px, inset rgba(9,9,5,1) 1px 1px 1px 0px;
+    box-shadow: rgba(0,0,0,0.1) 0px 1px 0px 0px, inset rgba(9,9,5,1) 1px 1px 1px 0px;
 
 }
 
+#homeForm form input:focus{
+    -webkit-box-shadow: rgba(0,0,0,0.1) 0px 1px 0px 0px, inset rgba(9,9,5,1) 1px 2px 2px 0px;
+    -moz-box-shadow: rgba(0,0,0,0.1) 0px 1px 0px 0px, inset rgba(9,9,5,1) 1px 2px 2px 0px;
+    box-shadow: rgba(0,0,0,0.1) 0px 1px 0px 0px, inset rgba(9,9,5,1) 1px 2px 2px 0px;
+  
+}
 
-div#formular label{
+
+#homeForm form input{
+    -webkit-transition: all 100ms ease-in;
+    -moz-transition: all 100ms ease-in;
+    -ms-transition: all 100ms ease-in;
+    -o-transition: all 100ms ease-in;
+    transition: all 100ms ease-in;
+}
+#homeForm label{
     display: block;
     padding: 3px;
-        color: black;
+    color: black;
 
 }
 
@@ -44,7 +58,7 @@ div#formular label{
     margin: 5px;
 }
 
-div#formular form div.formularDown input.button{
+#homeForm form div.homeFormBelow input.button{
     width: 81px;
     height: 24px;
     margin: 4px;
@@ -68,9 +82,9 @@ div#formular form div.formularDown input.button{
     box-shadow: rgba(0,0,0,0.38) 0px 2px 3px 1px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
 }
 
-div#formular form div.formularDown input.button:active{
+#homeForm form div.homeFormBelow input.button:active{
     -webkit-box-shadow: rgba(0,0,0,0.38) 0px 0px 0px 0px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
     -moz-box-shadow: rgba(0,0,0,0.38) 0px 0px 0px px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
     box-shadow: rgba(0,0,0,0.38) 0px 0px 0px 0px, inset rgba(255,255,255,0.4) 0px 1px 0px 0px;
-    
+
 }
