--- a/web/css/homeView.css
+++ b/web/css/homeView.css
@@ -20,7 +20,7 @@ h2{
     margin-top: 100px;
 }*/
 
-#formular {
+#homeForm{
     padding: 5px;
     margin: auto;
     margin-top: 5px;
@@ -33,12 +33,9 @@ h2{
     border-radius:5px;
     width: 600px;
     height: 350px; 
-    
-  
-
 }
 
-.formularDown {
+.homeFormBelow {
     margin-top: 150px;
     padding-bottom: 35px;
     border-radius:0 0 5px 5px;
@@ -48,7 +45,7 @@ h2{
     
 }
 
-.formularMiddl {
+.homeFormCenter {
     list-style-type: none;
     padding: 20px;
     text-align: center;
@@ -56,13 +53,13 @@ h2{
     
 }
 
-#formularLeft {
+#homeFormLeft {
     list-style-type: none;
     padding: 20px;
     float: left;
 }
 
-#formularRight {
+#homeFormRight {
     list-style-type: none;
     padding: 20px;
     float: right;
