--- a/web/css/styleMod.css
+++ b/web/css/styleMod.css
@@ -110,7 +110,7 @@ h1 small {
     box-shadow:inset 0 0 3px 3px #35525f;
 }
 
-/* user clicks the button, simply change the box inset*/
+/* user clicks the button*/
 #navigationBar li :active {
     background-image:-webkit-gradient(linear,left bottom,left top,color-stop(0,#1a444e),color-stop(0.5,#275c6f),color-stop(0.51,#407287),color-stop(1,#497690));
     background-image:-moz-linear-gradient(center bottom,#1a444e 0%,#275c6f 50%,#407287 51%,#497690 100%);
@@ -132,7 +132,7 @@ h1 small {
 
 
 
-/* Rounded corner for the first in last item */
+/* Rounded corner for the first and last item */
 #navigationBar li:first-child {
     -moz-border-radius:4px 0 0 4px;
     -webkit-border-radius:4px 0 0 4px;
@@ -171,9 +171,6 @@ to {
 
 /* PAGECONTENT */
 #body {
-
-
-    /***  CSS Gradient  ***/
     background-image: -webkit-gradient(linear, left top, left bottom,
         color-stop( 0.0, rgb(255, 255, 255) ),
         color-stop( 1.0, rgb(244, 244, 244) ));
@@ -198,9 +195,6 @@ to {
         rgb(255, 255, 255), 
         rgb(244, 244, 244) );
 
-
-
-
     padding-top:20px;
     -moz-border-radius:4px;
     -webkit-border-radius:4px;
@@ -209,42 +203,6 @@ to {
     -webkit-box-shadow:0 2px 2px #cecece;
     box-shadow:0 2px 2px #8b8b8b;
     z-index:5;
-}
-
-/* STYLING INITAL HOME VIEW */
-#HomeContainer p {
-    font-size:15px;
-    margin:0;
-    padding:20px 10px;
-    width:98%;
-    background-image:-webkit-linear-gradient(#dadada 0%,#dfdfdf 100%);
-    background-image:-moz-linear-gradient(#d0d0d0 0%,#dfdfdf 100%);
-    -moz-border-radius:4px;
-    -webkit-border-radius:4px;
-    border-radius:4px;
-    -moz-box-shadow:0 3px 3px #8b8b8b;
-    -webkit-box-shadow:0 3px 3px #8b8b8b;
-    box-shadow:0 3px 4px #8b8b8b;
-}
-
-#homeImages {
-    margin:60px auto;
-    width:100%;
-    background-image:-webkit-linear-gradient(#dadada 0%,#dfdfdf 100%);
-    background-image:-moz-linear-gradient(#d0d0d0 0%,#dfdfdf 100%);
-}
-
-#homeImages img {
-    margin:30px 100px;
-    background-color:#fff;
-    -moz-border-radius:4px;
-    -webkit-border-radius:4px;
-    border-radius:4px;
-    -moz-box-shadow:0 0 8px #8b8b8b;
-    -webkit-box-shadow:0 0 8px #8b8b8b;
-    box-shadow:0 0 8px #8b8b8b;
-    background-image:-webkit-linear-gradient(#d0d0d0 0%,#efefef 100%);
-    background-image:-moz-linear-gradient(#d0d0d0 0%,#efefef 100%);
 }
 
 /* STYLING OF THE FLIGHT TABLES */
@@ -326,7 +284,9 @@ tbody.scrollContent {
     color:#2d2d2d;
     border-bottom:2px inset #4c4c4c;
     border-right:1px dashed #9e9e9e;
-    background:-webkit-gradient(linear,left bottom,left top,color-stop(0.39,#bdbdbd),color-stop(0.7,#e0e0e0));
+    background:-webkit-gradient(linear,left bottom,left top,
+        color-stop(0.39,#bdbdbd),
+        color-stop(0.7,#e0e0e0));
     background:-moz-linear-gradient(center bottom,#bdbdbd 39%,#e0e0e0 70%);
     text-shadow:1px 1px 1px #fff;
 }
