--- a/web/css/AircraftDetails.css
+++ b/web/css/AircraftDetails.css
@@ -1,6 +1,15 @@
+
+#aircraftSearchfieldContainer{
+    text-align: center;
+ 
+}
+
+
+
+
+
 #entries a.entry {
     background: none repeat scroll 0% 0% rgb(255, 255, 255);    
-    border: 2px solid rgba(185,185,185,1);
     border-radius: 4px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
     margin: 0px 15px 15px 75px;
@@ -17,7 +26,7 @@ h2{
 }
 
 #entries a.entry:hover {
-    border: 2px solid rgba(34,143,179,1);
+    border: none;
     text-decoration: none;
     background: #fafafa;
     box-shadow: 0px 0px 4px rgba(0,0,0,0.92);
@@ -27,8 +36,8 @@ h2{
 
 #entries .entry .inline {
     position: absolute;
-    width: 590px;
-    height: 100px;
+    width: 690px;
+    height: 95px;
 }
 
 #entries .entry .image {
@@ -50,7 +59,7 @@ h2{
 }
 
 #entries .entry .rightImage {
-    float: left;
+    float: right;
     width: 122px;
     height: 69px;
     background: none repeat scroll 0% 0% rgb(255, 255, 255);
