--- a/web/css/homeView.css
+++ b/web/css/homeView.css
@@ -30,16 +30,20 @@ h2{
     border: solid 1px #ccc;
     padding: 10px;
     height: 95px;
+    -moz-border-radius:5px;
+    -webkit-border-radius:5px;
     border-radius:5px;
     width: 600px;
     height: 350px; 
+}
+#homeForm form input{
+    width: 160px;
+    height: 26px;
 }
 
 .homeFormBelow {
     margin-top: 150px;
     padding-bottom: 35px;
-    border-radius:0 0 5px 5px;
-
     text-align: center; 
     border-top: 1px solid #ccc;
     
