--- a/web/css/AircraftDetails.css
+++ b/web/css/AircraftDetails.css
@@ -11,7 +11,7 @@
 #entries a.entry {
     background: none repeat scroll 0% 0% rgb(255, 255, 255);    
     border-radius: 4px;
-    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);
+    /*box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.4);*/
     margin: 0px 15px 15px 75px;
     padding: 2px;
     margin-top: 20px;
