--- a/web/css/styleMod.css
+++ b/web/css/styleMod.css
@@ -10,7 +10,6 @@ ul,ol,li,h1,h2,h3,h4,h5,h6,div,pre,form,body,html,p,blockquote,fieldset,input {
 #wholePage {
     background-image: url(/images/NoiseBackground.png);
     background-attachment:fixed;
-
 }
 
 h1 {
@@ -30,11 +29,11 @@ h1 small {
     background-image:-webkit-linear-gradient(#d0d0d0 0%,#dfdfdf 100%);
     background-image:-moz-linear-gradient(#d0d0d0 0%,#dfdfdf 100%);
     -moz-border-radius:4px;
-    -webkit-border-radius:4px 4px 4px 4px;
-    border-radius:4px 4px 4px 4px;
-    padding:15px;
-    -webkit-box-reflect:below 4px -webkit-gradient(linear,left top,left bottom,from(transparent),color-stop(0.6,transparent),to(white));
-    margin-bottom:20px;
+    -webkit-border-radius:4px;
+    border-radius:4px;
+    padding:10px;
+    border: 1px outset #ccc;
+/*    -webkit-box-reflect:below 4px -webkit-gradient(linear,left top,left bottom,from(transparent),color-stop(0.6,transparent),to(white));*/
     margin-top:2px;
 }
 
@@ -51,7 +50,7 @@ h1 small {
 
 /* CONTENT */
 #content {
-    margin-top:50px;
+    margin-top:15px;
 }
 
 #content p {
@@ -64,7 +63,7 @@ h1 small {
 
 /* navigationBar */
 #navigationBar {
-    margin:40px 0 15px;
+    margin:10px 0 15px;
     list-style:none;
     /* Lucinda Grande = Apple. */
     font-family:"Lucida Sans Unicode","Lucida Grande",Verdana,Arial,Helvetica,sans-serif;
@@ -114,8 +113,9 @@ h1 small {
 #navigationBar li :active {
     background-image:-webkit-gradient(linear,left bottom,left top,color-stop(0,#1a444e),color-stop(0.5,#275c6f),color-stop(0.51,#407287),color-stop(1,#497690));
     background-image:-moz-linear-gradient(center bottom,#1a444e 0%,#275c6f 50%,#407287 51%,#497690 100%);
-    background-color:#244655;
     /* Fallback */
+    background-color:#244655;
+    /* inset box shadow */
     -moz-box-shadow:inset 0 1px 2px 2px #000;
     -webkit-box-shadow:inset 0 1px 2px 2px #000;
     box-shadow:inset 0 1px 2px 2px #000;
