--- a/web/css/styleMod.css
+++ b/web/css/styleMod.css
@@ -243,33 +243,33 @@ thead.fixedHeader tr {
 .FlightTable thead th {
     font:14px "Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,sans-serif;
     padding:4px 8px;
-    color:#fff;
+    color:black;
+    background-color: whitesmoke;
     position:relative;
-    text-shadow:1px 1px 1px #000;
-    border:1px solid #2f3c52;
-    border-bottom:2px solid #2f3c52;
+    border:1px solid black;
     -webkit-border-top-left-radius:5px;
     -webkit-border-top-right-radius:5px;
     -moz-border-radius:5px 5px 0 0;
     border-top-left-radius:5px;
     border-top-right-radius:5px;
     border-collapse:collapse;
+    -moz-box-shadow:0 2px 2px #cecece;
+    -webkit-box-shadow:0 2px 2px #cecece;
+    box-shadow:0 2px 2px #8b8b8b;-moz-box-shadow:0 2px 2px #cecece;
+    -webkit-box-shadow:0 2px 2px #cecece;
+    box-shadow:0 2px 2px #8b8b8b;
 }
 
 #arrivalsTable thead {
-    background-color:#618dca;
-    border-bottom:2px solid #2f3c52;
-    background-color:#3b88a3;
-    background-image:-webkit-gradient(linear,left bottom,left top,color-stop(0,#2b6f80),color-stop(0.5,#3b88a3),color-stop(0.51,#5aa0be),color-stop(1,#74b8e0));
-    background-image:-moz-linear-gradient(center bottom,#2b6f80 0%,#3b88a3 50%,#5aa0be 51%,#5ea1c8 100%);
+    background-color:whitesmoke;
+    border-bottom:2px solid #fff;
+    
 }
+    
 
 #departuresTable thead {
-    background-color:#61ca6a;
-    border-bottom:10px solid #3a6941;
-    background-color:#3ba33d;
-    background-image:-webkit-gradient(linear,left bottom,left top,color-stop(0,#2b8031),color-stop(0.5,#3ba33e),color-stop(0.51,#5bbf66),color-stop(1,#5ec76e));
-    background-image:-moz-linear-gradient(center bottom,#2b8031 0%,#3ba33e 50%,#5bbf66 51%,#5ec76e 100%);
+    background-color:whitesmoke;
+    border-bottom:2px solid #fff;
 }
 
 tbody.scrollContent {
@@ -283,20 +283,15 @@ tbody.scrollContent {
 .FlightTable tbody td {
     overflow:auto;
     font:14px "Lucida Grande","Lucida Sans Unicode",Helvetica,Arial,Verdana,sans-serif;
-    background-color:#797979;
+    background-color:whitesmoke;
     color:#2d2d2d;
-    border-bottom:2px inset #4c4c4c;
+    border-bottom:1px solid #4c4c4c;
     border-right:1px dashed #9e9e9e;
-    background:-webkit-gradient(linear,left bottom,left top,
-        color-stop(0.39,#bdbdbd),
-        color-stop(0.7,#e0e0e0));
-    background:-moz-linear-gradient(center bottom,#bdbdbd 39%,#e0e0e0 70%);
-    text-shadow:1px 1px 1px #fff;
+    height: 32px;
 }
 
 /* color links */
 .FlightTable tbody td a {
-    color:#08C;
     text-decoration:none;
 }
 
