--- a/web/css/AircraftDetails.css
+++ b/web/css/AircraftDetails.css
@@ -65,9 +65,10 @@ h2{
 
 
 #airlineEntry{
-    height: 95px;
-    width: 146px;
-    margin: 0px 5px 10px 72px;
+    height: 110px;
+    width: 230px;
+    margin: 0px 5px 10px 60px;
+    padding: 200px;
 }
 
 
@@ -89,6 +90,9 @@ h2{
     position: absolute;
     width: 690px;
     height: 95px;
+}
+#entries .entry{
+    margin: 10px;
 }
 
 #entries .entry .image {
