--- a/web/css/AircraftDetails.css
+++ b/web/css/AircraftDetails.css
@@ -1,8 +1,5 @@
 
 
-
-
-
 h2{
     padding: 20px;
 }
@@ -38,13 +35,7 @@ h2{
     float: left;
     border: outset 1px #ccc;
     padding-top: 5px;
-
     background-color: whitesmoke;
-
-  
-
-
-
 }
 
 #entries a.entry {   
@@ -102,6 +93,9 @@ h2{
     background: none repeat scroll 0% 0% rgb(255, 255, 255);
     padding: 5px;
     border-radius: 4px 4px 4px 4px;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    -o-border-radius: 4px 4px 4px 4px;
     box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
     margin:7px 2px auto 7px;
 }
