--- a/web/css/General.css
+++ b/web/css/General.css
@@ -89,16 +89,85 @@ h1 small {
     border-bottom:1px solid #2f3c52;
     border-top:1px solid #405e76;
     /* Gradient backgrounds for buttons. */
-    background-image:-webkit-gradient(linear,left bottom,left top,color-stop(0,#2b6f80),color-stop(0.5,#3b88a3),color-stop(0.51,#5aa0be),color-stop(1,#74b8e0));
-    background-image:-moz-linear-gradient(center bottom,#2b6f80 0%,#3b88a3 50%,#5aa0be 51%,#74b8e0 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom,
+        color-stop( 0.0, rgb(102, 208, 255) ),
+        color-stop( 0.486, rgb(102, 208, 255) ),
+        color-stop( 0.490, rgb(92, 187, 234) ),
+        color-stop( 1.0, rgb(0, 150, 213) ));
+
+  background-image: -webkit-linear-gradient(top,
+        rgb(102, 208, 255), 
+        rgb(102, 208, 255) 48.6%,
+        rgb(92, 187, 234) 49.0%,
+        rgb(0, 150, 213) );
+
+  background-image: -moz-linear-gradient(top,
+        rgb(102, 208, 255), 
+        rgb(102, 208, 255) 48.6%,
+        rgb(92, 187, 234) 49.0%,
+        rgb(0, 150, 213) );
+
+  background-image: -ms-linear-gradient(top,
+        rgb(102, 208, 255), 
+        rgb(102, 208, 255) 48.6%,
+        rgb(92, 187, 234) 49.0%,
+        rgb(0, 150, 213) );
+
+  background-image: -o-linear-gradient(top,
+        rgb(102, 208, 255), 
+        rgb(102, 208, 255) 48.6%,
+        rgb(92, 187, 234) 49.0%,
+        rgb(0, 150, 213) );
+
+  background-image: linear-gradient(top,
+        rgb(102, 208, 255), 
+        rgb(102, 208, 255) 48.6%,
+        rgb(92, 187, 234) 49.0%,
+        rgb(0, 150, 213) );
+
     /* Fallback */
     background-color:#618dca;
 }
 
 /*  hovering */
 #navigationBar li :hover {
-    background-image:-webkit-gradient(linear,left bottom,left top,color-stop(0,#205361),color-stop(0.5,#316f85),color-stop(0.51,#48859f),color-stop(1,#4e89ac));
-    background-image:-moz-linear-gradient(center bottom,#205361 0%,#316f85 50%,#48859f 51%,#4e89ac 100%);
+  
+  background-image: -webkit-gradient(linear, left top, left bottom,
+        color-stop( 0.0, rgb(90, 184, 227) ),
+        color-stop( 0.486, rgb(89, 180, 224) ),
+        color-stop( 0.490, rgb(78, 163, 204) ),
+        color-stop( 1.0, rgb(0, 135, 192) ));
+
+  background-image: -webkit-linear-gradient(top,
+        rgb(90, 184, 227), 
+        rgb(89, 180, 224) 48.6%,
+        rgb(78, 163, 204) 49.0%,
+        rgb(0, 135, 192) );
+
+  background-image: -moz-linear-gradient(top,
+        rgb(90, 184, 227), 
+        rgb(89, 180, 224) 48.6%,
+        rgb(78, 163, 204) 49.0%,
+        rgb(0, 135, 192) );
+
+  background-image: -ms-linear-gradient(top,
+        rgb(90, 184, 227), 
+        rgb(89, 180, 224) 48.6%,
+        rgb(78, 163, 204) 49.0%,
+        rgb(0, 135, 192) );
+
+  background-image: -o-linear-gradient(top,
+        rgb(90, 184, 227), 
+        rgb(89, 180, 224) 48.6%,
+        rgb(78, 163, 204) 49.0%,
+        rgb(0, 135, 192) );
+
+  background-image: linear-gradient(top,
+        rgb(90, 184, 227), 
+        rgb(89, 180, 224) 48.6%,
+        rgb(78, 163, 204) 49.0%,
+        rgb(0, 135, 192) );
+
     /* Fallback */
     background-color:#3a5c6b;
 
@@ -106,14 +175,48 @@ h1 small {
 
 /* user clicks the button*/
 #navigationBar li :active {
-    background-image:-webkit-gradient(linear,left bottom,left top,color-stop(0,#1a444e),color-stop(0.5,#275c6f),color-stop(0.51,#407287),color-stop(1,#497690));
-    background-image:-moz-linear-gradient(center bottom,#1a444e 0%,#275c6f 50%,#407287 51%,#497690 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom,
+        color-stop( 0.0, rgb(81, 164, 205) ),
+        color-stop( 0.486, rgb(79, 160, 200) ),
+        color-stop( 0.490, rgb(71, 148, 185) ),
+        color-stop( 1.0, rgb(0, 114, 162) ));
+
+  background-image: -webkit-linear-gradient(top,
+        rgb(81, 164, 205), 
+        rgb(79, 160, 200) 48.6%,
+        rgb(71, 148, 185) 49.0%,
+        rgb(0, 114, 162) );
+
+  background-image: -moz-linear-gradient(top,
+        rgb(81, 164, 205), 
+        rgb(79, 160, 200) 48.6%,
+        rgb(71, 148, 185) 49.0%,
+        rgb(0, 114, 162) );
+
+  background-image: -ms-linear-gradient(top,
+        rgb(81, 164, 205), 
+        rgb(79, 160, 200) 48.6%,
+        rgb(71, 148, 185) 49.0%,
+        rgb(0, 114, 162) );
+
+  background-image: -o-linear-gradient(top,
+        rgb(81, 164, 205), 
+        rgb(79, 160, 200) 48.6%,
+        rgb(71, 148, 185) 49.0%,
+        rgb(0, 114, 162) );
+
+  background-image: linear-gradient(top,
+        rgb(81, 164, 205), 
+        rgb(79, 160, 200) 48.6%,
+        rgb(71, 148, 185) 49.0%,
+        rgb(0, 114, 162) );
+
     /* Fallback */
     background-color:#244655;
     /* inset box shadow */
-    -moz-box-shadow:inset 0 0 3px 3px #35525f;
-    -webkit-box-shadow:inset 0 0 3px 3px #35525f;
-    box-shadow:inset 0 0 3px 3px #35525f;
+    -moz-box-shadow:inset 0 0 3px 3px #00597f;
+    -webkit-box-shadow:inset 0 0 3px 3px #00597f;
+    box-shadow:inset 0 0 3px 3px #00597f;
 }
 
 #navigationBar li a {
@@ -150,12 +253,46 @@ h1 small {
 }
 
 .selected{
-    background-image:-webkit-gradient(linear,left bottom,left top,color-stop(0,#1a444e),color-stop(0.5,#275c6f),color-stop(0.51,#407287),color-stop(1,#497690));
-    background-image:-moz-linear-gradient(center bottom,#1a444e 0%,#275c6f 50%,#407287 51%,#497690 100%);
+  background-image: -webkit-gradient(linear, left top, left bottom,
+        color-stop( 0.0, rgb(76, 155, 194) ),
+        color-stop( 0.486, rgb(74, 150, 188) ),
+        color-stop( 0.490, rgb(63, 132, 165) ),
+        color-stop( 1.0, rgb(0, 98, 140) ));
+
+  background-image: -webkit-linear-gradient(top,
+        rgb(76, 155, 194), 
+        rgb(74, 150, 188) 48.6%,
+        rgb(63, 132, 165) 49.0%,
+        rgb(0, 98, 140) );
+
+  background-image: -moz-linear-gradient(top,
+        rgb(76, 155, 194), 
+        rgb(74, 150, 188) 48.6%,
+        rgb(63, 132, 165) 49.0%,
+        rgb(0, 98, 140) );
+
+  background-image: -ms-linear-gradient(top,
+        rgb(76, 155, 194), 
+        rgb(74, 150, 188) 48.6%,
+        rgb(63, 132, 165) 49.0%,
+        rgb(0, 98, 140) );
+
+  background-image: -o-linear-gradient(top,
+        rgb(76, 155, 194), 
+        rgb(74, 150, 188) 48.6%,
+        rgb(63, 132, 165) 49.0%,
+        rgb(0, 98, 140) );
+
+  background-image: linear-gradient(top,
+        rgb(76, 155, 194), 
+        rgb(74, 150, 188) 48.6%,
+        rgb(63, 132, 165) 49.0%,
+        rgb(0, 98, 140) );
+
     background-color:#244655;
-    -moz-box-shadow:inset 0 0 3px 3px #35525f;
-    -webkit-box-shadow:inset 0 0 3px 3px #35525f;
-    box-shadow:inset 0 0 3px 3px #35525f;
+    -moz-box-shadow:inset 0 0 3px 3px #00597f;
+    -webkit-box-shadow:inset 0 0 3px 3px #00597f;
+    box-shadow:inset 0 0 3px 3px #00597f;
 }
 
 
@@ -184,7 +321,9 @@ h1 small {
     background-image: linear-gradient(top,
         rgb(255, 255, 255), 
         rgb(244, 244, 244) );
-
+    /*fallback*/
+    background-color: white;
+    
     padding-top:20px;
     -moz-border-radius:4px;
     -webkit-border-radius:4px;
